# skev-compiler

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: runtime.yml
skev-compiler/: Cargo.toml
skev-compiler/src/: main.rs
skev-compiler/src/parser/: mod.rs
skev-compiler/src/typechecker/: mod.rs
skev-runtime/: Cargo.toml  build.rs  cbindgen.toml
skev-runtime/src/: alloc.rs  arc.rs  init.rs  leak.rs  lib.rs  panic.rs  weak.rs
skev-runtime/tests/: integration.rs
src/: main.rs
src/codegen/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/typechecker/: mod.rs
src/types/: game_native.rs  mod.rs
tests/abi_smoke/: main.ll  run.sh
